--- a/DisasterRecovery/Views/Shared/_LayoutContractor.cshtml
+++ b/DisasterRecovery/Views/Shared/_LayoutContractor.cshtml
@@ -33,7 +33,7 @@
                                 <i class="fa fa-user-circle" aria-hidden="true"></i> Welcome @Session["LogedUserName"]
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <@{if (@Session["LogedUserRole"] != null)
+                                @{if (@Session["LogedUserRole"] != null)
                                     {
                                        <a class="dropdown-item" href="~/Users/Details/@Session["LogedUserID"]"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
                                        <div class="dropdown-divider"></div>
