--- a/DisasterRecovery/Views/Users/UnAuthorized.cshtml
+++ b/DisasterRecovery/Views/Users/UnAuthorized.cshtml
@@ -1,17 +1,149 @@
-﻿
-@{
+﻿@{
     Layout = null;
 }
-
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>UnAuthorized</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Not access - Disaster Recovery</title>
+
+    @*<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">*@
+    <style>
+        * {
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+        }
+
+        #notfound {
+            position: relative;
+            height: 100vh;
+        }
+
+            #notfound .notfound {
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                -webkit-transform: translate(-50%, -50%);
+                -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+            }
+
+        .notfound {
+            max-width: 520px;
+            width: 100%;
+            line-height: 1.4;
+            text-align: center;
+        }
+
+            .notfound .notfound-404 {
+                position: relative;
+                height: 200px;
+                margin: 0px auto 20px;
+                z-index: -1;
+            }
+
+                .notfound .notfound-404 h1 {
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: 336px;
+                    font-weight: 200;
+                    margin: 0px;
+                    color: #FFF;
+                    text-transform: uppercase;
+                    position: absolute;
+                    left: 50%;
+                    top: 50%;
+                    -webkit-transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
+                }
+
+                .notfound .notfound-404 h2 {
+                    font-family: 'Montserrat', sans-serif;
+                    font-size: 28px;
+                    font-weight: 400;
+                    text-transform: uppercase;
+                    color: #FFF;
+                    background: #0b1c2d;
+                    padding: 10px 5px;
+                    margin: auto;
+                    display: inline-block;
+                    position: absolute;
+                    bottom: 0px;
+                    left: 0;
+                    right: 0;
+                }
+
+            .notfound a {
+                font-family: 'Montserrat', sans-serif;
+                display: inline-block;
+                font-weight: 700;
+                text-decoration: none;
+                color: #fff;
+                text-transform: uppercase;
+                padding: 13px 23px;
+                background: #007bff;
+                font-size: 18px;
+                -webkit-transition: 0.2s all;
+                transition: 0.2s all;
+            }
+
+                .notfound a:hover {
+                    color: #007bff;
+                    background: #211b19;
+                }
+    </style>
+    <link rel="stylesheet" href="~/Content/main.css" />
 </head>
 <body>
-    <div> 
+    <div id="page-content-wrapper">
+        <nav class="navbar navbar-expand-lg navbar-light border-bottom">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-user-circle" aria-hidden="true"></i> Welcome @Session["LogedUserName"]
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                            @{if (@Session["LogedUserRole"] != null)
+                                    {
+                                       <a class="dropdown-item" href="~/Users/Details/@Session["LogedUserID"]"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
+                                       <div class="dropdown-divider"></div>
+                                       }
+                                }
+
+                                @{if (@Session["LogedUserName"] == null)
+                                    {
+                                        <a class="dropdown-item" href="~/Login/Index"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign in</a>
+                                    }
+                                    else
+                                    {
+                                        <a class="dropdown-item" href="~/Login/Logout"><i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a>
+                                    }
+                                }
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div id="notfound">
+            <div class="notfound">
+                <div class="notfound-404">
+                    <h1>Oops!</h1>
+                    <h2>Sorry you are not allowed to access this page</h2>
+                </div>
+                <a href="javascript:history.go(-1)">Go Back!</a>
+            </div>
+        </div>
     </div>
+        <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="3825f741881fd36a63695b2b-|49" defer=""></script>
+        <script src="~/Scripts/jquery-3.4.1.slim.min.js"></script>
+        <script src="~/Scripts/popper.min.js"></script>
+        <script src="~/Scripts/bootstrap.min.js"></script>
+        <script src="~/Scripts/template-functions.js"></script>
 </body>
+
 </html>
