--- a/DisasterRecovery/Views/Shared/_Layout.cshtml
+++ b/DisasterRecovery/Views/Shared/_Layout.cshtml
@@ -15,9 +15,9 @@
             <div class="list-group list-group-flush">
                 <a href="~/TimeCards/IndexAdm" class="list-group-item list-group-item-action menu-active"><i class="fa fa-home"></i>Home</a>
                 <a href="~/Subcontractors/Index" class="list-group-item list-group-item-action"><i class="fa fa-table" aria-hidden="true"></i>Sub-contractors</a>
-                <a href="~/JobLists" class="list-group-item list-group-item-action"><i class="fa fa-cube" aria-hidden="true"></i>Jobs List</a>
+                <a href="~/JobLists" class="list-group-item list-group-item-action"><i class="fa fa-cube" aria-hidden="true"></i>Job code Management</a>
                 <a href="~/Users" class="list-group-item list-group-item-action"><i class="fa fa-cube" aria-hidden="true"></i>User Management</a>
-                <a href="~/TimeCards/IndexAdm" class="list-group-item list-group-item-action"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>TimeCards</a>
+                <a href="~/TimeCards/IndexAdm" class="list-group-item list-group-item-action"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>TimeCard Approval</a>
                 <a href="~/SiteLocations" class="list-group-item list-group-item-action"><i class="fa fa-cube" aria-hidden="true"></i>Site Locations</a>
             </div>
         </div>
@@ -30,6 +30,9 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
+                <div class="float-left text-white">
+                Disaster Recovery Aplication : @ViewBag.Title
+                     </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item dropdown">
@@ -39,9 +42,9 @@
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                                 @{if (@Session["LogedUserRole"] != null)
                                     {
-                                       <a class="dropdown-item" href="~/Users/Details/@Session["LogedUserID"]"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
-                                       <div class="dropdown-divider"></div>
-                                       }
+                                        <a class="dropdown-item" href="~/Users/Details/@Session["LogedUserID"]"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
+                                        <div class="dropdown-divider"></div>
+                                    }
                                 }
                                 <div class="dropdown-divider"></div>
                                 @{if (@Session["LogedUserName"] == null)
