--- a/DisasterRecovery/Views/Shared/_LayoutContractor.cshtml
+++ b/DisasterRecovery/Views/Shared/_LayoutContractor.cshtml
@@ -14,14 +14,14 @@
             <div class="sidebar-heading"><img id="logo" style="width: 200px;" src="~/Content/img/4teamlogo.png"></div>
             <div class="list-group list-group-flush">
                 <a href="~/TimeCards/Index" class="list-group-item list-group-item-action menu-active"><i class="fa fa-home"></i>TimeCard List</a>
-                <a href="~/TimeCards/Create" class="list-group-item list-group-item-action"><i class="fa fa-table" aria-hidden="true"></i>Add TimeCard</a>
+                <a href="~/TimeCards/Create" class="list-group-item list-group-item-action"><i class="fa fa-table" aria-hidden="true"></i>TimeCard Submission</a>
             </div>
         </div>
 
         <div id="page-content-wrapper">
             <nav class="navbar navbar-expand-lg navbar-light border-bottom">
                 <button class="btn btn-link" id="menu-toggle">
-                    <i id="open-close" class="fa fa-long-arrow-left" aria-hidden="true"></i>
+                    <i id="open-close" class="fa fa-long-arrow-left" aria-hidden="true"></i> <h1>Disaster Recovery Aplication : @ViewBag.Title</h1>
                 </button>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars" aria-hidden="true"></i>
