--- a/DisasterRecovery/Views/Users/Create.cshtml
+++ b/DisasterRecovery/Views/Users/Create.cshtml
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="w-100"></div>
-        <div class="<div class="form-group">
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
