Latest Chnages to timecard views and functionalitites

--- a/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
+++ b/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
@@ -64,7 +64,8 @@
 </table>
 
 <div>
-    @Html.ActionLink("Submit Entry", "Submit")
+    @Html.ActionLink("Submit Entry", "Submit")|
+    @Html.ActionLink("Finish Later", "FinishLater")|
     @Html.ActionLink("Cancel", "Cancel")
 
 </div>
