--- a/DisasterRecovery/Views/TimeCards/Delete.cshtml
+++ b/DisasterRecovery/Views/TimeCards/Delete.cshtml
@@ -8,77 +8,16 @@
     }
 }
 
-<h2>Delete</h2>
+    <center>
+        <h3>Are you sure you want to delete this?</h3>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>TimeCard</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalHours)
-        </dt>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        <dd>
-            @Html.DisplayFor(model => model.TotalHours)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TotalAmount)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TotalAmount)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TimeStatus)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TimeStatus)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.RegDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.RegDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SiteLocation.LocationName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SiteLocation.LocationName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.SubContractor.SubContractorName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SubContractor.SubContractorName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.User.UserName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.User.UserName)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
-</div>
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </center>
