--- a/DisasterRecovery/Views/Shared/_Layout.cshtml
+++ b/DisasterRecovery/Views/Shared/_Layout.cshtml
@@ -27,12 +27,13 @@
                 <button class="btn btn-link" id="menu-toggle">
                     <i id="open-close" class="fa fa-long-arrow-left" aria-hidden="true"></i>
                 </button>
+                <div class="float-left text-white">
+                    Disaster Recovery Aplication : @ViewBag.Title
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
-                <div class="float-left text-white">
-                Disaster Recovery Aplication : @ViewBag.Title
-                     </div>
+
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item dropdown">
@@ -90,6 +91,11 @@
             $('#JoblistTable').DataTable();
             $('#SiteLocationTable').DataTable();
             $('#SubContractorTable').DataTable();
+            $('#TimecardAdmin').DataTable();
+            $('#TimecardIndex').DataTable();
+            $('#TimecardSubmi').DataTable();
+            $('#TimedetailsIndex').DataTable();
+            $('#TimecardetailsEdit').DataTable();
         });
     </script>
 </body>
