--- a/DisasterRecovery/Views/TimeCards/ReviewSubmission.cshtml
+++ b/DisasterRecovery/Views/TimeCards/ReviewSubmission.cshtml
@@ -12,25 +12,34 @@
 
         <h4>Jobs Performed</h4>
 
-        <table class="table">
-            <tr>
-                <th>
-                    Hours
-                </th>
-                <th>
-                    Amount
-                </th>
-                <th>
-                    Job
-                </th>
+        <table class="table" id="TimecardSubmi">
+            <thead>
+                <tr>
+                    <th>
+                        Hours
+                    </th>
+                    <th>
+                        Amount
+                    </th>
+                    <th>
+                        Job
+                    </th>
 
-            </tr>
+                </tr>
+            </thead>
 
             @foreach (var item in Model.TimeCardDetails)
             {
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.Hours)
+
+                        @{ if (item.Hours > item.JobList.MaxHour)
+                            {
+                                <Span style="color:red"> (Exceeded Max Hours)</Span>
+                                ViewBag.Alert = 1;
+                            }
+                        }
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Amount)
@@ -69,6 +78,9 @@
                 <th>
                     Submitted By
                 </th>
+                <th>
+                    Submission Date
+                </th>
 
             </tr>
             <tr>
@@ -85,7 +97,7 @@
                 </td>
 
                 <td>
-                    @Html.DisplayFor(model => model.RegDate)
+                    @Html.DisplayFor(model => model.SiteLocation)
                 </td>
 
                 <td>
@@ -96,6 +108,9 @@
                     @Html.DisplayFor(model => model.User.UserName)
                 </td>
 
+                <td>
+                    @Html.DisplayFor(model => model.RegDate)
+                </td>
             </tr>
 
         </table>
@@ -104,6 +119,16 @@
         <p>
             @Html.ActionLink("Approve", "Approve", new { id = Model.IdTimeCard })|
             @Html.ActionLink("Reject", "Reject", new { id = Model.IdTimeCard })|
-            @Html.ActionLink("Edit", "Edit", new { id = Model.IdTimeCard }) |
             @Html.ActionLink("Back to List", "IndexAdm")
         </p>
+
+        @{ if (ViewBag.Alert == 1)
+            {
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    <strong>Warning!</strong> Check some of those fields above, Contractor exceeded max hours for a job.
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            }
+        }
