--- a/DisasterRecovery/Views/Login/Index.cshtml
+++ b/DisasterRecovery/Views/Login/Index.cshtml
@@ -52,7 +52,7 @@
     </div>
     <div class="form-group">
         <div class=" col-md-12">
-            @Html.ActionLink("Remeber Password.", "RecoverAccount", "Users")
+            @Html.ActionLink("Remember Password.", "RecoverAccount", "Users")
         </div>
     </div>
 }
