--- a/DisasterRecovery/Views/Shared/_LayoutContractor.cshtml
+++ b/DisasterRecovery/Views/Shared/_LayoutContractor.cshtml
@@ -21,8 +21,11 @@
         <div id="page-content-wrapper">
             <nav class="navbar navbar-expand-lg navbar-light border-bottom">
                 <button class="btn btn-link" id="menu-toggle">
-                    <i id="open-close" class="fa fa-long-arrow-left" aria-hidden="true"></i> <h1>Disaster Recovery Aplication : @ViewBag.Title</h1>
+                    <i id="open-close" class="fa fa-long-arrow-left" aria-hidden="true"></i>
                 </button>
+                <div class="float-left text-white">
+                    Disaster Recovery Aplication : @ViewBag.Title
+                </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </button>
@@ -35,11 +38,11 @@
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                                 @{if (@Session["LogedUserRole"] != null)
                                     {
-                                       <a class="dropdown-item" href="~/Users/Details/@Session["LogedUserID"]"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
-                                       <div class="dropdown-divider"></div>
-                                       }
+                                        <a class="dropdown-item" href="~/Users/Details/@Session["LogedUserID"]"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
+                                        <div class="dropdown-divider"></div>
+                                    }
                                 }
-                                
+
                                 @{if (@Session["LogedUserName"] == null)
                                     {
                                         <a class="dropdown-item" href="~/Login/Index"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign in</a>
