--- a/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
+++ b/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Index";
     var totalHours = ViewBag.TotalHours;
     var totalAmount = ViewBag.TotalAmount;
-    
-     if (Session["LogedUserRole"] == "Contractor")
+
+    if (Session["LogedUserRole"] == "Contractor")
     {
         Layout = "~/Views/Shared/_LayoutContractor.cshtml";
     }
@@ -20,52 +20,75 @@
 <p>
     @Html.ActionLink("Add Labor", "Create")
 </p>
-<table class="table">
+
+
+<table class="table" id="TimedetailsIndex">
+    <thead>
+        <tr>
+            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.Hours)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Amount)
+            </th>
+            <th>
+                Job
+            </th>
+
+            <th></th>
+        </tr>
+    </thead>
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td> </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Hours)
+
+                @{ if (item.Hours > item.JobList.MaxHour)
+                    {
+                        <Span style="color:red"> (Exceeded Max Hours)</Span>
+                        ViewBag.Alert = 1;
+                    }
+                }
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Amount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.JobList.JobName)
+            </td>
+
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.IdTimeCardDetails }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.IdTimeCardDetails })
+            </td>
+        </tr>
+    }
     <tr>
-        <th></th>
-        <th>
-            @Html.DisplayNameFor(model => model.Hours)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Amount)
-        </th>
-        <th>
-            Job
-        </th>
-        
-        <th></th>
+        <th> Totals</th>
+        <td> @totalHours</td>
+        <td> @totalAmount</td>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td> </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Hours)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Amount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.JobList.JobName)
-        </td>
-       
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.IdTimeCardDetails}) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.IdTimeCardDetails})
-        </td>
-    </tr>
-}
-<tr>
-    <th> Totals</th>
-    <td> @totalHours</td> 
-    <td> @totalAmount</td>
-</tr>
-   
 </table>
 
 <div>
-    @Html.ActionLink("Submit Entry", "Submit")|
-    @Html.ActionLink("Finish Later", "FinishLater")|
+    @Html.ActionLink("Submit Entry", "Submit") |
+    @Html.ActionLink("Finish Later", "FinishLater") |
     @Html.ActionLink("Cancel", "Cancel")
 
 </div>
+
+@{ if (ViewBag.Alert == 1)
+    {
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Warning!</strong> Check some of those fields above, Time Card may be rejected.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
+}
