--- a/DisasterRecovery/Views/TimeCards/Details.cshtml
+++ b/DisasterRecovery/Views/TimeCards/Details.cshtml
@@ -35,6 +35,13 @@
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.Hours)
+
+                    @{ if (item.Hours > item.JobList.MaxHour)
+                        {
+                            <Span style="color:red"> (Exceeded Max Hours)</Span>
+                            ViewBag.Alert = 1;
+                        }
+                    }
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Amount)
@@ -74,7 +81,7 @@
             <th>
                 Contractor Name
             </th>
-            
+
         </tr>
         <tr>
             <td>
@@ -115,11 +122,21 @@
     }
     else
     {
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.IdTimeCard }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
-        
+        <p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.IdTimeCard }) |
+            @Html.ActionLink("Back to List", "Index")
+        </p>
+
     }
 
-    
+    @{ if (ViewBag.Alert == 1)
+        {
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>Warning!</strong> Check some of those fields above, Time Card may be rejected.
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        }
+    }
+
