--- a/DisasterRecovery/Views/TimeCards/IndexAdm.cshtml
+++ b/DisasterRecovery/Views/TimeCards/IndexAdm.cshtml
@@ -15,33 +15,35 @@
     </p>
     <hr>
 </center>
-<table class="table">
-    <tr>
-        <th>
-            Site Code
-        </th>
-        <th>
-            Contractor Name
-        </th>
-        <th>
-            Total Hours
-        </th>
-        <th>
-            Total Amount
-        </th>
-        <th>
-            Submission Date
-        </th>
-        <th>
-            Submission Status
-        </th>
+<table class="table" id="TimecardAdmin">
+    <thead>
+        <tr>
+            <th>
+                Site Code
+            </th>
+            <th>
+                Contractor Name
+            </th>
+            <th>
+                Total Hours
+            </th>
+            <th>
+                Total Amount
+            </th>
+            <th>
+                Submission Date
+            </th>
+            <th>
+                Submission Status
+            </th>
 
-        <th>
-            Submitted by
-        </th>
+            <th>
+                Submitted by
+            </th>
 
-        <th></th>
-    </tr>
+            <th></th>
+        </tr>
+    </thead>
 
 @foreach (var item in Model) {
 <tr>
