Forced reset password

--- a/DisasterRecovery/Views/JobLists/Index.cshtml
+++ b/DisasterRecovery/Views/JobLists/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DisasterRecovery.Models.JobList>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Job List";
 }
 
 <h2>Job List Management</h2>
