--- a/DisasterRecovery/Views/SiteLocations/Index.cshtml
+++ b/DisasterRecovery/Views/SiteLocations/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DisasterRecovery.Models.SiteLocation>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Locations";
 }
 
 <h2>Site Locations Management</h2>
