--- a/DisasterRecovery/Views/SubContractors/Create.cshtml
+++ b/DisasterRecovery/Views/SubContractors/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DisasterRecovery.Models.SubContractor
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create new Sub contractor";
 }
 
     <h2>Create Contractor</h2>
