--- a/DisasterRecovery/Views/SubContractors/Details.cshtml
+++ b/DisasterRecovery/Views/SubContractors/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DisasterRecovery.Models.SubContractor
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Sub contractor details;
 }
 
     <h2>Details of Contractor</h2>
