--- a/DisasterRecovery/Views/SubContractors/Edit.cshtml
+++ b/DisasterRecovery/Views/SubContractors/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DisasterRecovery.Models.SubContractor
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Sub contractor List";
 }
 
     <h2>Edit Contractor</h2>
