--- a/DisasterRecovery/Views/SubContractors/Index.cshtml
+++ b/DisasterRecovery/Views/SubContractors/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DisasterRecovery.Models.SubContractor>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Sub contractor List";
 }
 
 <h2>Contractor Management</h2>
