--- a/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
+++ b/DisasterRecovery/Views/TimeCardDetails/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DisasterRecovery.Models.TimeCardDetail>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Time Card List";
     var totalHours = ViewBag.TotalHours;
     var totalAmount = ViewBag.TotalAmount;
 
