--- a/DisasterRecovery/Views/TimeCardDetails/IndexEdit.cshtml
+++ b/DisasterRecovery/Views/TimeCardDetails/IndexEdit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DisasterRecovery.Models.TimeCardDetail>
 
 @{
-    ViewBag.Title = "IndexEdit";
+    ViewBag.Title = "Time Card Edit";
     var totalHours = ViewBag.TotalHours;
     var totalAmount = ViewBag.TotalAmount;
 
