--- a/DisasterRecovery/Views/TimeCards/IndexAdm.cshtml
+++ b/DisasterRecovery/Views/TimeCards/IndexAdm.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DisasterRecovery.Models.TimeCard>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Time Cards";
 }
 
     <center>
