--- a/DisasterRecovery/Views/Users/Details.cshtml
+++ b/DisasterRecovery/Views/Users/Details.cshtml
@@ -84,12 +84,15 @@
     </div>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.IdUser }) |
+
 
     @if (Session["LogedUserRole"] == "Admin")
     {
-    @Html.ActionLink("Back to List", "Index")
-    
+        @Html.ActionLink("Edit", "Edit", new { id = Model.IdUser }); 
+        
+        @Html.ActionLink("Back to List", "Index");
     }
+
+    @Html.ActionLink("Change PassWord", "EditPass", new { id = Model.IdUser })
 
 </p>
