--- a/DisasterRecovery/Views/Users/Edit.cshtml
+++ b/DisasterRecovery/Views/Users/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
-    if (Session["LogedUserRole"] == "Contractor")
+    if (Session["LogedUserRole"].ToString() == "Contractor")
     {
         Layout = "~/Views/Shared/_LayoutContractor.cshtml";
     }
@@ -59,12 +59,12 @@
             <div class="form-group">
                 <label class="control-label" for="UserPassWord">PassWord:</label>
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.UserPassWord, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
+                    @Html.EditorFor(model => model.UserPassWord, new { htmlAttributes = new { @class = "form-control hide", @type = "password" } })
                     @Html.ValidationMessageFor(model => model.UserPassWord, "", new { @class = "text-danger", @Required = "require" })
                 </div>
             </div>
         </div>
-        @{ if(Session["LogedUserRole"] == "Admin") { 
+        @{ if(Session["LogedUserRole"].ToString() == "Admin") { 
         <div class="col">
             <div class="form-group">
                 <label class="control-label" for="UserStatus">User Status:</label>
@@ -108,7 +108,7 @@
             }
 
 <div>
-    @if (Session["LogedUserRole"] == "Admin")
+    @if (Session["LogedUserRole"].ToString() == "Admin")
     {
         @Html.ActionLink("Back to List", "Index")
 
