--- a/DisasterRecovery/Views/Users/RecoverAccount.cshtml
+++ b/DisasterRecovery/Views/Users/RecoverAccount.cshtml
@@ -38,7 +38,7 @@
 
     <div class="form-group">
         <div class=" col-md-12">
-            <input type="submit" value="Send" class="btn btn-blue btn-block" id="btn-login" />
+            <input type="submit" value="Send" class="btn btn-primary" id="btn-login" />
         </div>
     </div>
     <div class="form-group">
